<resources>
    <string name="app_name">Playlist maker</string>>
    <string name="text_search">Поиск</string>
    <string name="text_media">Медиатека</string>
    <string name="text_settings">Настройки</string>
    <string name="themes_dark">Темная тема</string>
    <string name="share_app">Поделится приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="link_user_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="link_share_app" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_mail" translatable="false">asdxasdx20022002@ya.ru</string>
    <string name="support_mail_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="connection_problems">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="looked_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="error_failed_load_track">"Не удалось загрузить трек"</string>
    <string name="placeholder_text_error_network">Отсутствует подключение к интернету!</string>
    <string name="placeholder_text_error_generic">Ошибка сервера %1$d</string>
    <string name="placeholder_text_error_exception">Неизвестная ошибка %1$s</string>
    <string name="media_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist_has_been_created">Вы не создали\nни одного плейлиста</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="create_playlist_confirm_dialog_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_confirm_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist_confirm_dialog_positive_message">Завершить</string>
    <string name="create_playlist_confirm_dialog_neutral_message">Отмена</string>
    <string name="create_playlist_notification">Плейлист %1$s создан</string>
    <string name="placeholder_text_error_save_storage">Ошибка сохранения обложки</string>
    <string name="added_track_in_playlist_notification">Добавлено в плейлист %1$s</string>
    <string name="placeholder_text_error_save_playlist_database">"Ошибка сохранения плейлиста"</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="placeholder_text_error_add_track_to_playlist_database">Ошибка добавления трека</string>
    <string name="track_is_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_detail_confirm_dialog_title">Хотите удалить трек?</string>
    <string name="playlist_detail_confirm_dialog_positive_button">ДА</string>
    <string name="playlist_detail_confirm_dialog_negative_button">НЕТ</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="playlist_detail_empty_notification">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_detail_confirm_delete_dialog_title">Хотите удалить плейлист %1$s ?</string>
    <string name="placeholder_text_error_delete_playlist_database">Ошибка удаления плейлиста</string>
    <string name="edit_playlist_fragment_save_button">Сохранить</string>
    <string name="edit_playlist_fragment_title">Редактировать</string>
    <string name="placeholder_text_error_delete_storage">Ошибка удаления обложки</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>