<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:padding="@dimen/standart_padding">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_settings"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:textSize="@dimen/text_standart"
    android:layout_toEndOf="@+id/button_back"
    android:layout_marginStart="24dp"/>

<ImageView
android:layout_width="@dimen/icon_size"
android:clickable="true"
android:layout_height="@dimen/icon_size"
android:layout_centerVertical="true"
android:src="@drawable/light_mode_arrow"
android:id="@+id/button_back"/>

    </RelativeLayout>

<LinearLayout
android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    android:paddingTop="40dp"
    android:paddingStart="@dimen/standart_padding"
    android:paddingEnd="@dimen/standart_padding">

<FrameLayout
android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:text="@string/themes_dark"
    android:textColor="@color/black"
    android:textSize="@dimen/text_small" />

<Switch
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="end|center_vertical"
android:checked="true"
tools:ignore="UseSwitchCompatOrMaterialXml"/>

    </FrameLayout>

<FrameLayout
android:layout_width="match_parent"
android:layout_height="0dp"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/share_app"
    android:textColor="@color/black"
    android:textSize="@dimen/text_small"
    android:layout_gravity="center_vertical"/>

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/share"
    android:layout_gravity="end|center_vertical"/>

</FrameLayout>

<FrameLayout
android:layout_width="match_parent"
android:layout_height="0dp"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/write_to_support"
    android:textColor="@color/black"
    android:textSize="@dimen/text_small"
    android:layout_gravity="center_vertical"/>

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/support"
    android:layout_gravity="end|center_vertical"/>

</FrameLayout>

<FrameLayout
android:layout_width="match_parent"
android:layout_height="0dp"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/user_agreement"
    android:textColor="@color/black"
    android:textSize="@dimen/text_small"
    android:layout_gravity="center_vertical"/>

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/arrow_forward"
    android:layout_gravity="end|center_vertical"/>
</FrameLayout>
    </LinearLayout>
    </LinearLayout>
