<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout style="@style/BottomSheet"
    android:id="@+id/bottom_sheet_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View style="@style/BottomSheetRectangle"
        android:id="@+id/view_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/view_playlist_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_rectangle">

        <include
            android:id="@+id/view_playlist"
            layout="@layout/playlist_view"/>

    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView style="@style/TextViewStyleMenuPlaylist"
        android:id="@+id/tv_share"
        android:layout_marginTop="8dp"
        android:text="@string/share_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_playlist_container"/>

    <com.google.android.material.textview.MaterialTextView style="@style/TextViewStyleMenuPlaylist"
        android:id="@+id/tv_edit"
        android:text="@string/edit_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_share"/>


    <com.google.android.material.textview.MaterialTextView style="@style/TextViewStyleMenuPlaylist"
        android:id="@+id/tv_remove"
        android:text="@string/delete_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit"/>

</androidx.constraintlayout.widget.ConstraintLayout>