<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView style="@style/SecondLayoutBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_audio_player">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/standard_layout_margin"/>

         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/right_border"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_end="@dimen/standard_layout_margin"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border_song_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border_song_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <com.google.android.material.appbar.MaterialToolbar style="@style/ToolBarStyle"
            android:id="@+id/btn_audio_player_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_16"/>

        <ImageView
            android:id="@+id/iv_poster_song_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/ic_placeholder_312"
            android:layout_marginTop="@dimen/standard_layout_margin"
            app:layout_constraintEnd_toStartOf="@+id/right_border"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/btn_audio_player_back"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDetails"
            android:id="@+id/tv_name_song_player"
            android:textSize="@dimen/text_large"
            android:fontFamily="@font/ys_display_medium"
            android:layout_marginTop="@dimen/standard_layout_margin"
            app:layout_constraintEnd_toStartOf="@+id/right_border"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@id/iv_poster_song_player"
            tools:text="Yesterday (Remastered2009)"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDetails"
            android:id="@+id/tv_group_name_player"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@+id/right_border"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_song_player"
            tools:text="The Beatles"/>

        <ImageButton style="@style/ImageButtonAudioPlayerStyle"
            android:id="@+id/ibtn_add_to_playlist"
            android:src="@drawable/ic_button_add_to_playlist_51"
            app:layout_constraintBottom_toBottomOf="@+id/ibtn_music"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_music"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toTopOf="@+id/ibtn_music"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <ImageButton style="@style/ImageButtonAudioPlayerStyle"
            android:id="@+id/ibtn_music"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_button_play_music_100"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_add_to_favorite"
            app:layout_constraintStart_toEndOf="@+id/ibtn_add_to_playlist"
            app:layout_constraintTop_toBottomOf="@id/tv_group_name_player" />

        <ImageButton style="@style/ImageButtonAudioPlayerStyle"
            android:id="@+id/ibtn_add_to_favorite"
            android:src="@drawable/ic_button_add_to_favorite_51"
            app:layout_constraintBottom_toBottomOf="@+id/ibtn_music"
            app:layout_constraintEnd_toStartOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@+id/ibtn_music"
            app:layout_constraintTop_toTopOf="@+id/ibtn_music"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDetails"
            android:id="@+id/tv_current_time_song"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:textSize="14sp"
            android:text="0:30"
            app:layout_constraintEnd_toEndOf="@+id/ibtn_music"
            app:layout_constraintStart_toStartOf="@+id/ibtn_music"
            app:layout_constraintTop_toBottomOf="@+id/ibtn_music"
            tools:text="0:30"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDescriptionDetails"
            android:id="@+id/tv_description_duration_song"
            android:layout_marginTop="40dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@id/left_border_song_details"
            app:layout_constraintTop_toBottomOf="@id/tv_current_time_song" />

        <TextView style="@style/TextViewStyleAudioPlayerSongDetails"
            android:id="@+id/tv_duration_song_player"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="@id/tv_description_duration_song"
            app:layout_constraintEnd_toStartOf="@+id/right_border_song_details"
            app:layout_constraintStart_toEndOf="@+id/tv_description_duration_song"
            app:layout_constraintTop_toTopOf="@+id/tv_description_duration_song"
            tools:text="5:35"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDescriptionDetails"
            android:id="@+id/tv_description_album_song"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="@id/left_border_song_details"
            app:layout_constraintTop_toBottomOf="@id/tv_description_duration_song" />

        <TextView style="@style/TextViewStyleAudioPlayerSongDetails"
            android:id="@+id/tv_album_song_player"
            android:gravity="end"
            app:layout_constraintStart_toEndOf="@id/tv_description_album_song"
            app:layout_constraintBottom_toBottomOf="@id/tv_description_album_song"
            app:layout_constraintEnd_toStartOf="@+id/right_border_song_details"
            app:layout_constraintTop_toTopOf="@+id/tv_description_album_song"
            tools:text="Yesterday (Remastered 2009)"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDescriptionDetails"
            android:id="@+id/tv_description_year_song"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@+id/left_border_song_details"
            app:layout_constraintTop_toBottomOf="@id/tv_description_album_song"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDetails"
            android:id="@+id/tv_year_song_player"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/tv_description_year_song"
            app:layout_constraintBottom_toBottomOf="@id/tv_description_year_song"
            app:layout_constraintStart_toEndOf="@id/tv_description_year_song"
            app:layout_constraintEnd_toStartOf="@+id/right_border_song_details"
            tools:text="1965"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDescriptionDetails"
            android:id="@+id/tv_description_genre_song"
            android:text="@string/genre"
            app:layout_constraintTop_toBottomOf="@id/tv_description_year_song"
            app:layout_constraintStart_toStartOf="@id/left_border_song_details"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDetails"
            android:id="@+id/tv_genre_song_player"
            android:gravity="end"
            app:layout_constraintEnd_toStartOf="@id/right_border_song_details"
            app:layout_constraintStart_toEndOf="@id/tv_description_genre_song"
            app:layout_constraintTop_toTopOf="@id/tv_description_genre_song"
            app:layout_constraintBottom_toBottomOf="@id/tv_description_genre_song"
            tools:text="Rock"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDescriptionDetails"
            android:id="@+id/tv_description_country_song"
            android:text="@string/country"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_description_genre_song"
            app:layout_constraintStart_toStartOf="@id/left_border_song_details"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView style="@style/TextViewStyleAudioPlayerSongDetails"
            android:id="@+id/tv_country_song_player"
            android:gravity="end"
            app:layout_constraintStart_toEndOf="@id/tv_description_country_song"
            app:layout_constraintEnd_toStartOf="@id/right_border_song_details"
            app:layout_constraintTop_toTopOf="@id/tv_description_country_song"
            app:layout_constraintBottom_toBottomOf="@id/tv_description_country_song"
            tools:text="Великобритания"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tv_album_song_player, tv_description_album_song"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_year_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tv_year_song_player, tv_description_year_song"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>